<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_background"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textHello"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="135dp"
                android:layout_marginTop="15dp"
                android:text="Gym"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="aholic"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@id/textHello"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="@id/textHello"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textHello"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/white_rectangle_background"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageMenu">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/search_workouts"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/white_rectangle_background"
                    android:contentDescription="@string/app_name"
                    android:padding="6dp"
                    android:src="@drawable/ic_search"
                    app:tint="@color/colorBlack" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/sv_workouts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layoutWorkouts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    app:layout_constraintBottom_toTopOf="@id/btnAddWorkout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </LinearLayout>

                <Button
                    android:id="@+id/btnAddWorkout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/add_workout"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutWorkouts" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>